<resources>
    <string name="app_name">SIMULASI PINJAMAN ONLINE</string>
    <string name="banner" />
    <string name="jumlah_pinjaman_label">Jumlah Pinjaman</string>
    <string name="rp">Rp.</string>
    <string name="tenor_bulan">Tenor (Bulan)</string>
    <string name="cash_icon">TODO</string>
    <string name="calendar_icon">TODO</string>
    <string name="submit">SUBMIT</string>
    <string name="rp_0_00">Rp. 0,00</string>
    <string name="biaya_layanan_5">Biaya Layanan (5%)</string>
    <string name="suku_bunga_3_75">Suku Bunga (3.75%)</string>
    <string name="pencairan_bersih">Pencairan Bersih</string>
    <string name="textview">TextView</string>
    <string name="total_pinjaman">Total Pinjaman</string>
</resources>