<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="308dp"
        android:layout_height="200dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="52dp"
        android:contentDescription="@string/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/undraw_transfer_money_rywa" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="53dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cash_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/icons8_money_bag_90" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pinjaman_layout"
        android:layout_width="260dp"
        android:layout_height="63dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="24dp"
        android:hint="@string/jumlah_pinjaman_label"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pinjaman_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="43dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/calendar_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/icons8_calendar_100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tenor_layour"
        android:layout_width="260dp"
        android:layout_height="68dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:hint="@string/tenor_bulan"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/pinjaman_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tenor_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="159dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/biaya_layanan"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="52dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn">

        <TextView
            android:id="@+id/biaya_layanan_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/biaya_layanan_5" />

        <TextView
            android:id="@+id/biaya_layanan_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rp_0_00"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/suku_bunga"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="52dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biaya_layanan">

        <TextView
            android:id="@+id/suku_bunga_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/suku_bunga_3_75" />

        <TextView
            android:id="@+id/suku_bunga_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rp_0_00"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pencairan_bersih"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="52dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suku_bunga">

        <TextView
            android:id="@+id/pencairan_bersih_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pencairan_bersih" />

        <TextView
            android:id="@+id/pencairan_bersih_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rp_0_00"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/total_pinjaman"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="51dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pencairan_bersih">

        <TextView
            android:id="@+id/total_pinjaman_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_pinjaman" />

        <TextView
            android:id="@+id/total_pinjaman_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rp_0_00"
            android:textAlignment="textEnd" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>